Ver https://stackoverflow.com/questions/43371813/hotworddetector-using-voiceinteractionservice-in-android

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,27 +12,82 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <service
+            android:name=".MyVoiceInteractionSessionService"
+            android:exported="false" />
+
+        <activity
+            android:name=".VoiceInteractionMain"
+            android:label="Voice Interaction"
+            android:theme="@android:style/Theme.Material">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:excludeFromRecents="true"
+            android:label="Voice Interaction Settings"
+            android:noHistory="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
         <service
             android:name=".MyVoiceInteractionService"
             android:exported="false"
-            android:permission="android.permission.BIND_VOICE_INTERACTION">
-
+            android:label="Test Voice Interaction Service"
+            android:permission="android.permission.BIND_VOICE_INTERACTION"
+            android:process=":interactor">
             <meta-data
                 android:name="android.voice_interaction"
-                android:value="@xml/my_voice_interaction_service" />
+                android:resource="@xml/my_voice_interaction_service" />
+
+            <intent-filter>
+                <action android:name="android.service.voice.VoiceInteractionService" />
+            </intent-filter>
         </service>
-
         <service
-            android:name=".MyVoiceInteractionSessionService"
-            android:exported="false" />
-
+            android:name=".MainInteractionSessionService"
+            android:permission="android.permission.BIND_VOICE_INTERACTION"
+            android:process=":session" />
         <service
             android:name=".MyRecognitionService"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Test Voice Interaction Service">
+            <intent-filter>
+                <action android:name="android.speech.RecognitionService" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.speech"
+                android:resource="@xml/recognition_service" />
+        </service>
+
+        <activity
+            android:name=".TestInteractionActivity"
+            android:label="Voice Interaction Target"
+            android:theme="@android:style/Theme.Material.Light.Voice">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.VOICE" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
